added mobile nav

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -1,9 +1,7 @@
-{{ define "main" }}
+{{ define "main" }} {{ range first 1 (where .Site.RegularPages ".Section" "podcasts") }}
 
-<h1>Hugo with Webpack, Sass, and PostCSS</h1>
-
-<h3>Hooray 🎉 - you've built this with <a href="https://github.com/netlify/victor-hugo">Victor-Hugo</a>!</h3>
-
-<a href="{{ "/tech" | relURL }}">Check out the tech</a>
-
-{{ end }}
+<span>NEW PODCAST EPISODE {{.PublishDate}}</span>
+<h1>{{.Title}}</h1>
+<p>{{.Summary}}</p>
+<a href="{{.Permalink}}" title="{{.LinkTitle}}">Listen Now</a>
+{{ end }} {{ end }}
