--- a/site/layouts/_default/baseof.html
+++ b/site/layouts/_default/baseof.html
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-    {{ block "header" . }}{{ partial "header" . }}{{end}} {{ block "main" . }}{{end}} {{ block "footer" . }}{{ partial "footer" . }}{{end}} {{ $script := .Site.Data.webpack.main }} {{ with $script.js }}
+    {{ block "main-nav" . }}{{ partial "main-nav" . }}{{end}} {{ block "main" . }}{{end}} {{ block "footer" . }}{{ partial "footer" . }}{{end}} {{ $script := .Site.Data.webpack.main }} {{ with $script.js }}
     <script src="{{ relURL . }}"></script>
     {{ end }}
   </body>
