--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -7,18 +7,29 @@
   Or add your statements here:
  */
 body {
-  font-size: calc(10px + 1vmin);
-  font-family: "Fira Sans", sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background: $clr-bg;
+    font-size: calc(10px + 1vmin);
+    font-family: "Fira Sans", sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    background: $clr-bg;
 }
 
 a {
-  color: pink;
-  text-decoration: none;
+    color: pink;
+    text-decoration: none;
 }
 
 .content {
-  padding: 0 32px;
+    padding: 0 32px;
+}
+
+.featured-podcast-block {
+    background: red;
+    display: flex;
+    &__img-wrap {
+        width: 300px;
+        img {
+            width: 100%;
+        }
+    }
 }
