--- a/_includes/components/footer.njk
+++ b/_includes/components/footer.njk
@@ -1,5 +1,5 @@
 <footer class="site-footer">
   <small>
-    This project is maintained by <a href="https://www.shakyexperience.com">James Richard Lane</a>.</a>.
+    This project is maintained by <a href="https://www.shakyexperience.com">James Richard Lane</a>.</a>. and ya boi <a href="www.artofjam.es">James Thomas Merrill</a>
   </small>
 </footer>
